# mystudying-rustwasm-hello-lindera

./: Cargo.toml  index.html
.github/workflows/: rust.yml
pkg/: calling_lindera.d.ts  calling_lindera.js  calling_lindera_bg.wasm.d.ts  package.json
src/: lib.rs
