[package]
name = "calling-lindera"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
lindera = "0.27.1"
lindera-core = "0.27.1"
lindera-dictionary = { version = "0.27.1", features = ["ipadic"] }
lindera-tokenizer = { version = "0.27.1", features = ["ipadic"] }
lindera-analyzer = { version = "0.27.1", features = ["ipadic", "ipadic-filter"] }

wasm-bindgen = { version = "0.2.89", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6.3"
serde_json = "1.0.108"
